[package]
name = "adder"
version = "0.1.3"
authors = ["Hayato Ito <hayatoito@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

add-one = { version = "^0.1.3-alpha.1", path = "../add-one" }
